# single_button_game

./: .gitignore  .gitlab-ci.yml  42.json  CLAUDE.md  Cargo.toml  Containerfile  Makefile  STORIES.md  Trunk.toml  best_score.json  custom_level.json  index.html
.github/workflows/: pages.yml
assets/blocks/: single_block_green.xcf
levels/: sequence.json
levels/standard/: 01_simple_stack.json  02_two_posts.json  03_bridge.json  04_pyramid.json  05_balance.json  06_arch.json  1_single_block.json  2_two_blocks.json  asdkfj.json  carrier.json  tower.json
src/: blueprint.rs  constants.rs  failed.rs  lib.rs  main.rs  menu.rs  scoring.rs  state.rs  stats.rs  wasm_audio.rs
src/editor/: components.rs  fall.rs  input.rs  mod.rs  resources.rs  save.rs  setup.rs  ui.rs
src/playing/: audio.rs  components.rs  faces.rs  input.rs  mod.rs  particles.rs  resources.rs  settle.rs  setup.rs  ui.rs
