[package]
name = "single_button_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
avian2d = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Enable max optimizations for dependencies in dev builds, but not for our code
[profile.dev.package."*"]
opt-level = 3
