[package]
name = "single_button_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["wav"] }
avian2d = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Window",
  "Storage",
  "AudioContext",
  "AudioContextState",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Enable max optimizations for dependencies in dev builds, but not for our code
[profile.dev.package."*"]
opt-level = 3

# Size-optimized WASM release profile
[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 1
